--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   }
 }
