--- a/vercel.json
+++ b/vercel.json
@@ -15,56 +15,64 @@
       "dest": "index.js"
     },
     {
-      "src": "/products/",
-      "dest": ""
+      "src": "/products/(.*)",
+      "dest": "index.js"
     },
     {
       "src": "/categories",
       "dest": "index.js"
     },
     {
-      "src": "/categories/",
-      "dest": ""
+      "src": "/categories/(.*)",
+      "dest": "index.js"
     },
     {
       "src": "/brands",
       "dest": "index.js"
     },
     {
-      "src": "/brands/",
-      "dest": ""
+      "src": "/brands/(.*)",
+      "dest": "index.js"
     },
     {
       "src": "/users",
       "dest": "index.js"
     },
     {
-      "src": "/users/",
-      "dest": ""
+      "src": "/users/(.*)",
+      "dest": "index.js"
     },
     {
       "src": "/auth",
       "dest": "index.js"
     },
     {
-      "src": "/auth/",
-      "dest": ""
+      "src": "/auth/(.*)",
+      "dest": "index.js"
     },
     {
       "src": "/cart",
       "dest": "index.js"
     },
     {
-      "src": "/cart/",
-      "dest": ""
+      "src": "/cart/(.*)",
+      "dest": "index.js"
     },
     {
       "src": "/orders",
       "dest": "index.js"
     },
     {
-      "src": "/orders/",
-      "dest": ""
+      "src": "/orders/(.*)",
+      "dest": "index.js"
+    },
+    {
+      "src": "/",
+      "dest": "build/index.html"
+    },
+    {
+      "src": "/(.+)",
+      "dest": "build/$1"
     }
   ]
 }
