--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "bugs": {
     "url": "https://github.com/bhushan2311/https-github.com-bhushan2311-e-commerce_MERN-Backend/issues"
   },
+  "homepage": ".",
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
